--- a/numeral-system-practice.css
+++ b/numeral-system-practice.css
@@ -1,16 +1,1 @@
-body {
-	background-color: #e0ffff;
-	font-family: Verdana;
-	color: #00003f;
-	font-size: 2vw;
-}
-
-h1 {
-	font-size: 3.1vw;
-}
-
-select, form, button, input {
-	font-size: 2.25vw;
-	color: #00003f;
-	font-family: Verdana;
-}
+body{background-color:#e0ffff;color:#00003f;font:2vw Verdana}h1{font-size:3.1vw}select,form,button,input{color:#00003f;font:2.25vw Verdana}select,input{background-color:#6fffff}
